@@ -16,11 +16,11 @@
 #include <QtCore/QPoint>
 #include <QtGui/QItemSelectionModel>
 #include <QtGui/QPainter>
+#include <QtGui/QPixmap>
 
 #include "AbstractProjection.h"
 #include "GeoDataStyle.h"
 #include "MarblePlacemarkModel.h"
-#include "ViewParams.h"
 #include "ViewportParams.h"
 #include "VisiblePlaceMark.h"
 
